# ed

./: .clang-format  .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  FAQ  FAQ.md  Makefile.am  Makefile.in  NEWS  README  README.md  REUSE.toml  THANKS  TODO  aclocal.m4  autogen.sh  bootstrap-sh  bootstrap.sh  config.h.in  configure  configure.ac  ed.spec  upgrade-sh  upgrade.sh
.github/workflows/: ed.yml
.reuse/: dep5
contrib/: .gitignore  Makefile.am  apply-license.sh  call-graph.sh  cats.ed  cut-and-paste.patch  dot.travis.yml  ed-mode.el  import-gnulib.sh  oi-hipster_config.h.diff  strict-posix-compliance.diff
contrib/call-graph/: Makefile.am  autogen.sh  call-graph.in  configure.ac
contrib/prdg/: .gitignore  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  prdg.c  prdg.h
contrib/prdg/testsuite/: generate-random-graph.in
contrib/shell-call-graph/: .gitignore  Makefile.am  autogen.sh  configure.ac  shell-call-graph.in
contrib/shell-call-graph/testsuite/: fit-image  flash-diskimage
debian/: README.Debian  changelog  control  copyright  rules  watch
debian/source/: include-binaries
debian/upstream/: signing-key.asc
doc/: .gitignore  Makefile.am  Makefile.in  SUSv3  SUSv4  SUSv4.md  bsd-ed.1  bsd_ed.1  ed-adv.info  ed-adv.texi  ed-intro.info  ed-intro.texi  ed.1  ed.info  ed.texi  fdl.texi  fresh_look.md  gnu-ed.1  gpl.texi  stamp-vti  version.texi
doc/bwk/: Makefile.am  Makefile.in
doc/bwk/tmac/: refer.tmac  s.tmac
include/: argmax.h  pathmax.h
lib/: .gitignore  Makefile.am  Makefile.am-dist  Makefile.in  alloca.h  dot.gitignore  getopt-cdefs.h  getopt.c  getopt.h  getopt1.c  getopt_int.h  langinfo.h  limits.h  locale.h  malloc.c  memset.c  patch-Makefile.am.diff  pthread.h  realloc.c  regcomp.c  regex.c  regex_internal.c  regex_internal.h  regexec.c  stdbool.in.h  stdint.h  strspn.c  strtok.c  time.h  unistd.h  wchar.h  wctype.h
lib/glthread/: .gitignore
lib/sys/: types.h
lib_bsd/: Makefile.am  bsd_getopt.h
libbsd/: Makefile.am  getopt_long.c
m4/: .gitignore  ax_compile_check_sizeof.m4  ax_func_getopt_long.m4  gnulib-cache.m4  gnulib-comp.m4
pkgs/: .gitignore  Makefile.am
pkgs/Debian/: Containerfile  Containerfile.in
pkgs/Fedora/: Containerfile  Containerfile.in
pkgs/scripts/: build-pkg.in  deploy-pkg.in
po/: .gitignore  ChangeLog  Makefile.in.in  Makevars  POTFILES-noregex.in  POTFILES-regex.in  POTFILES.in  af.gmo  af.po  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  ed-gnulib.pot  ed.pot  ed.pot.in  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  es.po.~1~  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  (+49 more)
src/: Makefile.am  Makefile.in  aux.c  buf.c  buffer.c  cbc.c  cmds.c  ed.h  exec.c  filter.c  glbl.c  global.c  io.c  main.c  page.c  parse.c  re.c  regexp.c  register.c  signal.c  sub.c  subst.c  undo.c  utf8.c  version.c
testsuite/: Makefile.am  Makefile.in  README  README.md  a3.r  a3.t  atlocal.in  bang3.r  bang3.t  c2.r  c3.t  c4.r  c4.t  delim.d  delim.r  delim.t  e1.r  e1.t  e5.r  e5.t  ed.in  ef1.r  ef1.tef  ef2.d  ef3.r  ef3.tef  ef4.d  ef4.r  ef4.tef  eg1.1.d  eg1.2.d  eg1.3.d  eg1.r  eg1.tmf  eg2.r  eg2.tmf  eg3.tmf  g06.t  g07.t  g08.r  (+171 more)
